Add HTTPS POST support for controlling the fan (big mess, bug with 1st verification NOT fixed)